# vector-text-similarity-search

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
bertserver/: Dockerfile  entrypoint.sh
bertserver/model/: bert_config.json  vocab.txt
lab/: Dockerfile  bert_server_client.py  create_documents.py  create_index.py  index.json  index_document.py  main.ipynb  pyproject.toml
